--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,11 @@
 {
     "crons": [
         {
-            "path": "/api/cron/check-expiry",
+            "path": "/api/cron/check-instructor-expiry",
+            "schedule": "0 16 * * *"
+        },
+        {
+            "path": "/api/cron/check-studio-expiry",
             "schedule": "0 16 * * *"
         }
     ]
